--- a/Practica5/gotoxy.cbp
+++ b/Practica5/gotoxy.cbp
@@ -11,70 +11,70 @@
 				<Option working_dir="/home/alumno/Documentos/G5-X1/Robotica/Practica5"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 all"/>
-					<CompileFile command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 all"/>
+					<CompileFile command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="install/strip">
 				<Option working_dir="/home/alumno/Documentos/G5-X1/Robotica/Practica5"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 install/strip"/>
-					<CompileFile command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 install/strip"/>
+					<CompileFile command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="install/local">
 				<Option working_dir="/home/alumno/Documentos/G5-X1/Robotica/Practica5"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 install/local"/>
-					<CompileFile command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 install/local"/>
+					<CompileFile command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="edit_cache">
 				<Option working_dir="/home/alumno/Documentos/G5-X1/Robotica/Practica5"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 edit_cache"/>
-					<CompileFile command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 edit_cache"/>
+					<CompileFile command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="rebuild_cache">
 				<Option working_dir="/home/alumno/Documentos/G5-X1/Robotica/Practica5"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 rebuild_cache"/>
-					<CompileFile command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 rebuild_cache"/>
+					<CompileFile command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="list_install_components">
 				<Option working_dir="/home/alumno/Documentos/G5-X1/Robotica/Practica5"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 list_install_components"/>
-					<CompileFile command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 list_install_components"/>
+					<CompileFile command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="install">
 				<Option working_dir="/home/alumno/Documentos/G5-X1/Robotica/Practica5"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 install"/>
-					<CompileFile command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 install"/>
+					<CompileFile command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="gotoxy">
@@ -113,19 +113,12 @@
 					<Add directory="/usr/include/x86_64-linux-gnu/qt5/QtXml"/>
 					<Add directory="/usr/include/x86_64-linux-gnu/qt5/QtXmlPatterns"/>
 					<Add directory="/usr/include/x86_64-linux-gnu/qt5/QtNetwork"/>
-					<Add directory="/usr/include/c++/10"/>
-					<Add directory="/usr/include/x86_64-linux-gnu/c++/10"/>
-					<Add directory="/usr/include/c++/10/backward"/>
-					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/10/include"/>
-					<Add directory="/usr/local/include"/>
-					<Add directory="/usr/include/x86_64-linux-gnu"/>
-					<Add directory="/usr/include"/>
 				</Compiler>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 gotoxy"/>
-					<CompileFile command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 gotoxy"/>
+					<CompileFile command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="gotoxy/fast">
@@ -164,39 +157,32 @@
 					<Add directory="/usr/include/x86_64-linux-gnu/qt5/QtXml"/>
 					<Add directory="/usr/include/x86_64-linux-gnu/qt5/QtXmlPatterns"/>
 					<Add directory="/usr/include/x86_64-linux-gnu/qt5/QtNetwork"/>
-					<Add directory="/usr/include/c++/10"/>
-					<Add directory="/usr/include/x86_64-linux-gnu/c++/10"/>
-					<Add directory="/usr/include/c++/10/backward"/>
-					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/10/include"/>
-					<Add directory="/usr/local/include"/>
-					<Add directory="/usr/include/x86_64-linux-gnu"/>
-					<Add directory="/usr/include"/>
 				</Compiler>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 gotoxy/fast"/>
-					<CompileFile command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 gotoxy/fast"/>
+					<CompileFile command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="ICES__home_alumno_Documentos_G5-X1_Robotica_Practica5_src">
 				<Option working_dir="/home/alumno/Documentos/G5-X1/Robotica/Practica5/src"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 ICES__home_alumno_Documentos_G5-X1_Robotica_Practica5_src"/>
-					<CompileFile command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 ICES__home_alumno_Documentos_G5-X1_Robotica_Practica5_src"/>
+					<CompileFile command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="gotoxy_autogen">
 				<Option working_dir="/home/alumno/Documentos/G5-X1/Robotica/Practica5/src"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 gotoxy_autogen"/>
-					<CompileFile command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j16 -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 gotoxy_autogen"/>
+					<CompileFile command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -f &quot;/home/alumno/Documentos/G5-X1/Robotica/Practica5/src/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 		</Build>
